--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Example Portfolio</title>
+    <title>Exoample Portfoli</title>
 </head>
 <body>
-    <h1>Hello GitHub.io !</h1>
+    <h1>ここにポートフォリオの詳細を表示</h1>
 </body>
 </html>
