--- a/index.html
+++ b/index.html
@@ -3,9 +3,175 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Exoample Portfoli</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js"></script>
+    <title>ポートフォリオ</title>
 </head>
 <body>
-    <h1>ここにポートフォリオの詳細を表示</h1>
+  <div class="max-w-3xl mx-auto text-center mt-16">
+    <h1 class="text-4xl font-bold text-gray-900 leading-tight mb-2 pb-4 relative">
+        <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-pink-500">My Profile</span>
+        <span class="absolute bottom-0 left-0 w-full h-1 bg-gradient-to-r from-purple-500 to-pink-500"></span>
+    </h1>
+    <p class="text-lg text-gray-800 mb-8">R.Uのポートフォリオです。詳しい質問はsilver.lining.0504⭐︎gmail.com（⭐︎を@に変換）宛にお願いします。</p>
+</div>
+    <section class="About">
+    <h2>About</h2>
+    <p>新卒からキャリアの大半をIT業界のエンジニアとして過ごす。開発エンジニア歴は1年7ヶ月ほど、社内SE歴は8年ほど。幼い頃からIT技術が好きで、小学生時代からHTML/CSSを描いたり、CGI/Perlを設置・改修して遊んでいた。ガジェット収集も好きで、2度ほどPC自作経験あり。技術を伸ばすだけではなく、ビジネスやマネジメントに理解のあるエンジニアを目指して日々自己研鑽中s。</p>
+    </section>
+    <section class="Works">
+        <ol class="sm:flex">
+            <li class=""></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+    </section>
+    <section class="skillset">
+    <h2>スキルセット</h2>
+    <div>
+    <ol class="sm:flex">
+        <li class="basis-4/12"><canvas id="myBackendChart" class=""></canvas>
+        <ol class="border p-2 m-2">
+            <li>5 - Platinum</li>
+            <li>4 - Gold</li>
+            <li>3 - Silver</li>
+            <li>2 - Bronze</li>
+            <li>1 - Beginner</li>
+        </ol>
+        </li>
+        <li class="basis-4/12"><canvas id="myFrontendChart" class=""></canvas>
+            <ol class="border p-2 m-2">
+                <li>5 - Platinum</li>
+                <li>4 - Gold</li>
+                <li>3 - Silver</li>
+                <li>2 - Bronze</li>
+                <li>1 - Beginner</li>
+            </ol>
+        </li>
+        <li class="basis-4/12"><canvas id="myDevOpsChart" class=""></canvas>
+            <ol class="border p-2 m-2">
+                <li>5 - Platinum</li>
+                <li>4 - Gold</li>
+                <li>3 - Silver</li>
+                <li>2 - Bronze</li>
+                <li>1 - Beginner</li>
+            </ol>
+        </li>
+    </ol>
+    </div>
+</section>
 </body>
+<!--Footer container-->
+<footer
+  class="flex flex-col items-center bg-zinc-50 text-center text-surface dark:bg-neutral-700 dark:text-white">
+  <div class="container pt-9">
+    <!-- Social media icons container -->
+    <div class="mb-6 flex justify-center space-x-2">
+      <a
+        href="https://github.com/silver-lining0504"
+        type="button"
+        class="rounded-full bg-transparent p-3 font-medium uppercase leading-normal text-surface transition duration-150 ease-in-out hover:bg-neutral-100 focus:outline-none focus:ring-0 dark:text-white dark:hover:bg-secondary-900"
+        data-twe-ripple-init>
+        <span class="mx-auto [&>svg]:h-5 [&>svg]:w-5">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 496 512">
+            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+            <path
+              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
+          </svg>
+        </span>
+      </a>
+
+    </div>
+  </div>
+
+  <!--Copyright section-->
+  <div class="w-full bg-black/5 p-4 text-center">
+    © 2023 Copyright:
+    <a href="https://tw-elements.com/">R.Un</a>
+  </div>
+</footer>
+<script>
+    var ctx = document.getElementById("myFrontendChart");
+    var myFrontendChart = new Chart(ctx, {
+    type: 'radar',
+    data: {
+      labels: ["HTML/CSS", "Javascript", "jQuery", "Vue.js", "Bootstrap","Tailwind"],
+      datasets: [{
+        label: "Front-end",
+        data: [4, 3, 3, 1, 2, 1],
+        backgroundColor: "#b7ded2",  //グラフ背景色
+        borderColor: "#6FBDA4",        //グラフボーダー色
+      }]
+    },
+    options: {
+      scales: {
+        r: {
+          max: 5,        //グラフの最大値
+          min: 0,        //グラフの最小値
+          ticks: {
+            stepSize: 1  //目盛間隔
+          }
+        }
+      },
+    }
+  });
+  </script>
+<script>
+    var ctx = document.getElementById("myBackendChart");
+    var myBackendChart = new Chart(ctx, {
+    type: 'radar',
+    data: {
+      labels: ["Java", "Python", "Ruby", "MySQL", "Go"],
+      datasets: [{
+        label: "Back-end",
+        data: [2, 3, 2, 3, 1],
+        backgroundColor: "#f6a6b2",  //グラフ背景色
+        borderColor: "#EB465F",        //グラフボーダー色
+      }]
+    },
+    options: {
+      scales: {
+        r: {
+          max: 5,        //グラフの最大値
+          min: 0,        //グラフの最小値
+          ticks: {
+            stepSize: 1  //目盛間隔
+          }
+        }
+      },
+    }
+  });
+</script>
+<script>
+    var ctx = document.getElementById("myDevOpsChart");
+    var myDevOpsChart = new Chart(ctx, {
+    type: 'radar',
+    data: {
+      labels: ["Linux", "AWS", "Vim", "Git", "Docker"],
+      datasets: [{
+        label: "DevOps",
+        data: [3, 2, 2, 2, 1],
+        backgroundColor: "#f7c297",  //グラフ背景色
+        borderColor: "#EE8738",        //グラフボーダー色
+      }]
+    },
+    options: {
+      scales: {
+        r: {
+          max: 5,        //グラフの最大値
+          min: 0,        //グラフの最小値
+          ticks: {
+            stepSize: 1  //目盛間隔
+          }
+        }
+      },
+    }
+  });
+</script>
 </html>
