--- a/index.html
+++ b/index.html
@@ -13,24 +13,47 @@
         <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-pink-500">My Profile</span>
         <span class="absolute bottom-0 left-0 w-full h-1 bg-gradient-to-r from-purple-500 to-pink-500"></span>
     </h1>
-    <p class="text-lg text-gray-800 mb-8">R.Uのポートフォリオです。詳しい質問はsilver.lining.0504⭐︎gmail.com（⭐︎を@に変換）宛にお願いします。</p>
+    <p class="text-lg text-gray-800 mb-8">R.Unのポートフォリオです。詳しい質問はsilver.lining.0504⭐︎gmail.com（⭐︎を@に変換）宛にお願いします。</p>
 </div>
-    <section class="About">
-    <h2>About</h2>
-    <p>新卒からキャリアの大半をIT業界のエンジニアとして過ごす。開発エンジニア歴は1年7ヶ月ほど、社内SE歴は8年ほど。幼い頃からIT技術が好きで、小学生時代からHTML/CSSを描いたり、CGI/Perlを設置・改修して遊んでいた。ガジェット収集も好きで、2度ほどPC自作経験あり。技術を伸ばすだけではなく、ビジネスやマネジメントに理解のあるエンジニアを目指して日々自己研鑽中s。</p>
+    <section class="About p-2">
+    <h2 class="text-2xl font-bold dark:text-white py-2">About</h2>
+    <p>新卒からキャリアの大半をIT業界のエンジニアとして過ごす。開発エンジニア歴は1年7ヶ月ほど、社内SE歴は8年ほど。幼い頃からIT技術が好きで、小学生時代からHTML/CSSを描いたり、CGI/Perlを設置・改修して遊んでいた。ガジェット収集も好きで、2度ほどPC自作経験あり。技術を伸ばすだけではなく、ビジネスやマネジメントに理解のあるエンジニアを目指して日々自己研鑽中。</p>
     </section>
-    <section class="Works">
+    <section class="Works p-2">
+      <h2 class="text-2xl font-bold dark:text-white py-2">Works</h2>
         <ol class="sm:flex">
-            <li class=""></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="border p-2 m-2 basis-4/12">
+            <p>業務系 WEB アプリケーション</p>
+            <p>詳細設計／コーディング／UI・UXデザイン／開発／テストを担当(Java/javascript/HTML/MySQL)</p>
+            </li>
+            <li class="border p-2 m-2 basis-4/12">
+            <p>機械学習による画像編集モジュールの作成</p>
+            <p>詳細設計／コーディング／テスト</p>
+            </li>
+            <li class="border p-2 m-2 basis-4/12">
+              <p>既存基幹システムのモバイル版アプリ作成</p>
+              <p>詳細設計／コーディング／UI・UXデザイン／開発／テストを担当(Java/javascript/HTML/MySQL/GitLab)</p>
+            </li>
+            <li class="border p-2 m-2 basis-4/12">
+              <p>VBAを利用した帳票作成システム</p>
+              <p>コーディング／テストを担当(VBA)</p>
+            </li>
+            <li class="border p-2 m-2 basis-4/12">
+              <p>Windows環境用のRPAを作成</p>
+              <p>詳細設計／コーディング／開発／テストを担当(uwsc)</p>
+            </li>
+            <li class="border p-2 m-2 basis-4/12">
+              <p>求人原稿の自動作成プログラムの新規機能追加開発／API開発</p>
+              <p>詳細設計／コーディング／開発／テスト／インフラ保守を担当(アジャイル/Ruby on Rails/Python selenium／AWS／Docker/GitHub)</p>
+            </li>
+            <li class="border p-2 m-2 basis-4/12">
+              <p>MicroCMSクローニングサンプルアプリ（個人開発）</p>
+              <p>基本設計／コーディング／UI・UXデザイン／開発／テストを担当(Nuxt.js/HTML/CSS/Tailwind/GitHub)</p>
+            </li>
         </ol>
     </section>
-    <section class="skillset">
-    <h2>スキルセット</h2>
+    <section class="skillset p-2">
+    <h2 class="text-2xl font-bold dark:text-white py-2">Skill</h2>
     <div>
     <ol class="sm:flex">
         <li class="basis-4/12"><canvas id="myBackendChart" class=""></canvas>
@@ -61,6 +84,10 @@
             </ol>
         </li>
     </ol>
+    <p>一つの技術を極めるというよりは広く浅くフルスタックな経験をしてきた。言語を問わず、基礎的な文法に関しては直ちにキャッチアップ可能。フロントエンドの実務経験ではやや古いライブラリしか使ったことがないのが弱み。Vue.jsを自己学習中。</p>
+    <h3 class="text-1xl font-bold dark:text-white py-2">Other</h3>
+    <p>社内SEとしての経験でGoogle Apps Script（Google Workspace APIs含む）・Microsoft Graph APIなど、IT管理者向けのAPIの使用経験あり。</p>
+    <p>Adobe Illustrator／Adobe Photoshop／figma／Canva等のデザインソフトも実務で利用経験あり（微経験）。</p>
     </div>
 </section>
 </body>
