--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
               <p>VBAを利用した帳票作成システム</p>
               <p>コーディング／テストを担当(VBA)</p>
             </li>
-            <li class="border p-2 m-2 basis-4/12">
+            <li class="border p-2 m-2 sm:basis-4/12">
               <p>Windows環境用のRPAを作成</p>
               <p>詳細設計／コーディング／開発／テストを担当(uwsc)</p>
             </li>
-            <li class="border p-2 m-2 basis-4/12">
+            <li class="border p-2 m-2 sm:basis-4/12">
               <p>求人原稿の自動作成プログラムの新規機能追加開発／API開発</p>
               <p>詳細設計／コーディング／開発／テスト／インフラ保守を担当(アジャイル/Ruby on Rails/Python selenium／AWS／Docker/GitHub)</p>
             </li>
-            <li class="border p-2 m-2 basis-4/12">
-              <p>MicroCMSクローニングサンプルアプリ（個人開発）</p>
+            <li class="border p-2 m-2 sm:basis-4/12">
+              <p><a href="https://github.com/silver-lining0504/sample-microcms-blog">MicroCMSクローニングサンプルアプリ（個人開発）</a></p>
               <p>基本設計／コーディング／UI・UXデザイン／開発／テストを担当(Nuxt.js/HTML/CSS/Tailwind/GitHub)</p>
             </li>
         </ol>
