--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </section>
     <section class="Works p-2">
       <h2 class="text-2xl font-bold dark:text-white py-2">Works</h2>
-        <ol class="sm:flex">
-            <li class="border p-2 m-2 basis-4/12">
+        <ol class="">
+            <li class="grid-cols-3 border p-2 m-2">
             <p>業務系 WEB アプリケーション</p>
             <p>詳細設計／コーディング／UI・UXデザイン／開発／テストを担当(Java/javascript/HTML/MySQL)</p>
             </li>
-            <li class="border p-2 m-2 basis-4/12">
+            <li class="grid-cols-3 border p-2 m-2">
             <p>機械学習による画像編集モジュールの作成</p>
             <p>詳細設計／コーディング／テスト</p>
             </li>
-            <li class="border p-2 m-2 basis-4/12">
+            <li class="grid-cols-3 border p-2 m-2">
               <p>既存基幹システムのモバイル版アプリ作成</p>
               <p>詳細設計／コーディング／UI・UXデザイン／開発／テストを担当(Java/javascript/HTML/MySQL/GitLab)</p>
             </li>
@@ -47,7 +47,7 @@
               <p>詳細設計／コーディング／開発／テスト／インフラ保守を担当(アジャイル/Ruby on Rails/Python selenium／AWS／Docker/GitHub)</p>
             </li>
             <li class="border p-2 m-2 sm:basis-4/12">
-              <p><a href="https://github.com/silver-lining0504/sample-microcms-blog">MicroCMSクローニングサンプルアプリ（個人開発）</a></p>
+              <p><a href="https://github.com/silver-lining0504/sample-microcms-blog" class="underline text-cyan-500">MicroCMSクローニングサンプルアプリ（個人開発）</a></p>
               <p>基本設計／コーディング／UI・UXデザイン／開発／テストを担当(Nuxt.js/HTML/CSS/Tailwind/GitHub)</p>
             </li>
         </ol>
@@ -88,6 +88,7 @@
     <h3 class="text-1xl font-bold dark:text-white py-2">Other</h3>
     <p>社内SEとしての経験でGoogle Apps Script（Google Workspace APIs含む）・Microsoft Graph APIなど、IT管理者向けのAPIの使用経験あり。</p>
     <p>Adobe Illustrator／Adobe Photoshop／figma／Canva等のデザインソフトも実務で利用経験あり（微経験）。</p>
+    <p>英文のビジネスレベルでの読み書きが可能。海外ツールの利用規約の確認や、英文でのメールのやり取りの経験が多々ある。</p>
     </div>
 </section>
 </body>
